// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a tile truncated mid-layer > carries the walker failure on the handle 1`] = `"unexpected end of input (unable to take 231 bytes)"`;

exports[`a tile truncated mid-layer > keeps the regions the walk did reach 1`] = `
[
  "layer[0]",
  "size",
  "tag",
  "name",
  "extent",
  "column_count",
  "schema",
  "column[0]",
  "type",
  "column[1]",
  "type",
  "column data",
  "column[0] Id",
  "id",
  "header",
  "stream_type",
  "encoding",
  "num_values",
  "byte_length",
  "data",
  "column[1] Geometry",
  "stream_count",
  "meta",
  "header",
  "stream_type",
  "encoding",
  "num_values",
  "byte_length",
  "data",
  "stream[0]",
  "header",
  "stream_type",
  "encoding",
  "num_values",
  "byte_length",
  "data",
  "layer[1]",
  "size",
  "tag",
  "<unannotated>",
]
`;

exports[`annotateTile > annotates a v1 tile 1`] = `
{
  "bufLen": 30,
  "regions": [
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 0,
      "kind": "meta",
      "label": "layer[0]",
      "len": 30,
      "offset": 0,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "size",
      "len": 1,
      "offset": 0,
      "value": "29 (varint) - tag + body",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "tag",
      "len": 1,
      "offset": 1,
      "value": "0x01 -> Tag01",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "name",
      "len": 7,
      "offset": 2,
      "value": ""layer1"",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "extent",
      "len": 1,
      "offset": 9,
      "value": "80",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "column_count",
      "len": 1,
      "offset": 10,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "schema",
      "len": 2,
      "offset": 11,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[0]",
      "len": 1,
      "offset": 11,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 1,
          "meaning": "base type = Id",
          "raw": 0,
        },
        {
          "hi": 0,
          "lo": 0,
          "meaning": "not optional: each feature has a non-NULL value",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "type",
      "len": 1,
      "offset": 11,
      "value": "0x00 Id",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[1]",
      "len": 1,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 1,
          "meaning": "base type = Geometry",
          "raw": 2,
        },
        {
          "hi": 0,
          "lo": 0,
          "meaning": "not optional: each feature has a non-NULL value",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "type",
      "len": 1,
      "offset": 12,
      "value": "0x04 Geometry",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "column data",
      "len": 17,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[0] Id",
      "len": 5,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "id",
      "len": 5,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 4,
      "offset": 13,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "category = Data",
          "raw": 1,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "subtype = None",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "stream_type",
      "len": 1,
      "offset": 13,
      "value": "0x10 Data(None)",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 5,
          "meaning": "logical1 = None",
          "raw": 0,
        },
        {
          "hi": 4,
          "lo": 2,
          "meaning": "logical2 = None",
          "raw": 0,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 14,
      "value": "0x02 logical=Int(None) physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 15,
      "value": "1",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 16,
      "value": "1",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "u32",
        },
        "logical": "int/none",
        "numValues": 1,
        "physical": "varint",
        "streamType": "data",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 1,
      "offset": 17,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[1] Geometry",
      "len": 12,
      "offset": 18,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "stream_count",
      "len": 1,
      "offset": 18,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "meta",
      "len": 5,
      "offset": 19,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 4,
      "offset": 19,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "category = Length",
          "raw": 3,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "subtype = VarBinary",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "stream_type",
      "len": 1,
      "offset": 19,
      "value": "0x30 Length(VarBinary)",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 5,
          "meaning": "logical1 = None",
          "raw": 0,
        },
        {
          "hi": 4,
          "lo": 2,
          "meaning": "logical2 = None",
          "raw": 0,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 20,
      "value": "0x02 logical=Int(None) physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 21,
      "value": "1",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 22,
      "value": "1",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "u32",
        },
        "logical": "int/none",
        "numValues": 1,
        "physical": "varint",
        "streamType": "length[var-binary]",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 1,
      "offset": 23,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "stream[0]",
      "len": 6,
      "offset": 24,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 4,
      "offset": 24,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "category = Data",
          "raw": 1,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "subtype = Vertex",
          "raw": 3,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "stream_type",
      "len": 1,
      "offset": 24,
      "value": "0x13 Data(Vertex)",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 5,
          "meaning": "logical1 = ComponentwiseDelta",
          "raw": 2,
        },
        {
          "hi": 4,
          "lo": 2,
          "meaning": "logical2 = None",
          "raw": 0,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 25,
      "value": "0x42 logical=Vertex(ComponentwiseDelta) physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 26,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 27,
      "value": "2",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "i32",
        },
        "logical": "vertex/componentwise-delta",
        "numValues": 2,
        "physical": "varint",
        "streamType": "data[vertex]",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 2,
      "offset": 28,
      "value": null,
    },
  ],
}
`;

exports[`annotateTile > annotates a v2 tile 1`] = `
{
  "bufLen": 25,
  "regions": [
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 0,
      "kind": "meta",
      "label": "layer[0]",
      "len": 25,
      "offset": 0,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "size",
      "len": 1,
      "offset": 0,
      "value": "24 (varint) - tag + body",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "tag",
      "len": 1,
      "offset": 1,
      "value": "0x02 -> Tag02",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "name",
      "len": 7,
      "offset": 2,
      "value": ""layer1"",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "extent",
      "len": 1,
      "offset": 9,
      "value": "80",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "feature_count",
      "len": 1,
      "offset": 10,
      "value": "1",
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 7,
          "meaning": "no m-value section",
          "raw": 0,
        },
        {
          "hi": 6,
          "lo": 4,
          "meaning": "shared presence bitfields = 0",
          "raw": 0,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "geometry layout = Points",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "layout",
      "len": 1,
      "offset": 11,
      "value": "0x00 Points",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "geometry",
      "len": 8,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "types",
      "len": 3,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "header",
      "len": 2,
      "offset": 12,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 7,
          "meaning": "has_explicit_count = false -> 1 values from context",
          "raw": 0,
        },
        {
          "hi": 6,
          "lo": 4,
          "meaning": "logical = None, numbered for integer stream",
          "raw": 0,
        },
        {
          "hi": 3,
          "lo": 2,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "extension = 0",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 12,
      "value": "0x08 logical=None physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 13,
      "value": "1",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "u32",
        },
        "logical": "int/none",
        "numValues": 1,
        "physical": "varint",
        "streamType": "length[var-binary]",
      },
      "container": false,
      "depth": 3,
      "kind": "dataBlob",
      "label": "data",
      "len": 1,
      "offset": 14,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "vertices",
      "len": 5,
      "offset": 15,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "header",
      "len": 3,
      "offset": 15,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 7,
          "meaning": "has_explicit_count = true -> a num_values varint follows",
          "raw": 1,
        },
        {
          "hi": 6,
          "lo": 4,
          "meaning": "logical = CwDelta, numbered for vertex stream",
          "raw": 2,
        },
        {
          "hi": 3,
          "lo": 2,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "extension = 0",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 15,
      "value": "0xA8 logical=CwDelta physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "num_values",
      "len": 1,
      "offset": 16,
      "value": "2",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 4,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 17,
      "value": "2",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "i32",
        },
        "logical": "vertex/componentwise-delta",
        "numValues": 2,
        "physical": "varint",
        "streamType": "data[vertex]",
      },
      "container": false,
      "depth": 3,
      "kind": "dataBlob",
      "label": "data",
      "len": 2,
      "offset": 18,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 1,
      "kind": "meta",
      "label": "column_count",
      "len": 1,
      "offset": 20,
      "value": "1",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 1,
      "kind": "meta",
      "label": "columns",
      "len": 4,
      "offset": 21,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 2,
      "kind": "meta",
      "label": "column[0] Id",
      "len": 4,
      "offset": 21,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 4,
          "meaning": "presence = AllPresent",
          "raw": 0,
        },
        {
          "hi": 3,
          "lo": 0,
          "meaning": "data type = Id",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 3,
      "kind": "meta",
      "label": "type",
      "len": 1,
      "offset": 21,
      "value": "0x00 AllPresent Id",
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 3,
      "kind": "meta",
      "label": "data",
      "len": 3,
      "offset": 22,
      "value": null,
    },
    {
      "bits": [],
      "blob": null,
      "container": true,
      "depth": 4,
      "kind": "meta",
      "label": "header",
      "len": 2,
      "offset": 22,
      "value": null,
    },
    {
      "bits": [
        {
          "hi": 7,
          "lo": 7,
          "meaning": "has_explicit_count = false -> 1 values from context",
          "raw": 0,
        },
        {
          "hi": 6,
          "lo": 4,
          "meaning": "logical = None, numbered for integer stream",
          "raw": 0,
        },
        {
          "hi": 3,
          "lo": 2,
          "meaning": "physical = VarInt",
          "raw": 2,
        },
        {
          "hi": 1,
          "lo": 0,
          "meaning": "extension = 0",
          "raw": 0,
        },
      ],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "encoding",
      "len": 1,
      "offset": 22,
      "value": "0x08 logical=None physical=VarInt",
    },
    {
      "bits": [],
      "blob": null,
      "container": false,
      "depth": 5,
      "kind": "meta",
      "label": "byte_length",
      "len": 1,
      "offset": 23,
      "value": "1",
    },
    {
      "bits": [],
      "blob": {
        "hint": {
          "kind": "u32",
        },
        "logical": "int/none",
        "numValues": 1,
        "physical": "varint",
        "streamType": "data",
      },
      "container": false,
      "depth": 4,
      "kind": "dataBlob",
      "label": "data",
      "len": 1,
      "offset": 24,
      "value": null,
    },
  ],
}
`;

exports[`annotateTile > renders the knobs it is given 1`] = `
"00000000                                     | layer[0] (30 B)
00000000  1d                        .        |   size: 29 (varint) - tag + body
00000001  01                        .        |   tag: 0x01 -> Tag01
00000002  06 6c 61 79 65 72 31      .layer1  |   name: "layer1"
00000009  50                        P        |   extent: 80
0000000a  02                        .        |   column_count: 2
0000000b                                     |   schema (2 B)
0000000b                                     |     column[0] (1 B)
0000000b  00                        .        |       type: 0x00 Id
0000000c                                     |     column[1] (1 B)
0000000c  04                        .        |       type: 0x04 Geometry
0000000d                                     |   column data (17 B)
0000000d                                     |     column[0] Id (5 B)
0000000d                                     |       id (5 B)
0000000d                                     |         header (4 B)
0000000d  10                        .        |           stream_type: 0x10 Data(None)
0000000e  02                        .        |           encoding: 0x02 logical=Int(None) physical=VarInt
0000000f  01                        .        |           num_values: 1
00000010  01                        .        |           byte_length: 1
00000011                                     |         data [Data(None) Int(None)/VarInt, 1 values, 1 B]
00000012                                     |     column[1] Geometry (12 B)
00000012  02                        .        |       stream_count: 2
00000013                                     |       meta (5 B)
00000013                                     |         header (4 B)
00000013  30                        0        |           stream_type: 0x30 Length(VarBinary)
00000014  02                        .        |           encoding: 0x02 logical=Int(None) physical=VarInt
00000015  01                        .        |           num_values: 1
00000016  01                        .        |           byte_length: 1
00000017                                     |         data [Length(VarBinary) Int(None)/VarInt, 1 values, 1 B]
00000018                                     |       stream[0] (6 B)
00000018                                     |         header (4 B)
00000018  13                        .        |           stream_type: 0x13 Data(Vertex)
00000019  42                        B        |           encoding: 0x42 logical=Vertex(ComponentwiseDelta) physical=VarInt
0000001a  02                        .        |           num_values: 2
0000001b  02                        .        |           byte_length: 2
0000001c                                     |         data [Data(Vertex) Vertex(ComponentwiseDelta)/VarInt, 2 values, 2 B]
"
`;

exports[`decodeBlob > decodes a string payload as text 1`] = `
{
  "kind": "text",
  "value": "residential_zone_north_sector_1commercial_zone_south_sector_2industrial_zone_east_sector_3park_zone_west_sector_4water_zone_north_sector_5residential_zone_south_sector_6",
}
`;

exports[`decodeBlob > hands ALP parameters across as a BigInt 1`] = `
{
  "base": -225n,
  "e": 2,
  "f": 0,
  "kind": "alp",
}
`;
